# airbus-ship-detection

./: .gitignore  README.md  pyproject.toml
airbus_ship_detection/: augmentation.py  configs.py  datasets.py  inference.py  losses.py  main.py  metrics.py  models.py  processing.py  trainer.py  visuals.py
notebooks/: 000_explore_data.ipynb  001_train_model.ipynb
tests/: test_main.py  test_metrics.py
